--- a/vscroll.html
+++ b/vscroll.html
@@ -38,7 +38,7 @@
     }
     #slideDoorContent {
       overflow-y: hidden;
-      max-height: 500px;
+      max-height: 90%;
 
     }
     #title {
