--- a/vscroll.html
+++ b/vscroll.html
@@ -322,7 +322,7 @@ $(function() {
 });
 </script>
   </head>
-  <body>
+  <body class="modal-open">
   <div id="mobile-content">
     <div id="slideDoor">
       <div id="slideDoorOpen">>></div>
