--- a/vscroll.html
+++ b/vscroll.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta content="width=device-width, minimum-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
     <title>SlideOut</title>
   <style type="text/css">
     #slideDoor {
@@ -11,7 +11,7 @@
       left: -1px;
       max-height: 100%;
       background-color: #fff; 
-      top: 10%;          
+      top: 15%;          
     }
     #slideDoorOpen {
       position: absolute;
@@ -33,8 +33,8 @@
       right: 3px;
       overflow: hidden;
       cursor: pointer;
-      padding: 0;
-      font-size: 80px;
+      padding: 20;
+      font-size: 40px;
       background-color: red;
     }
     #slideDoorContent {
@@ -90,6 +90,15 @@
     .modal-open {
       overflow: hidden;
     }
+    #testAndroid{
+      height: 12%;
+      width: 100%;
+      background-color: white;
+      position: fixed;
+      top: 2px;
+      left: 0px;
+      border: 2px solid #aaa;
+    }
   </style>    
 <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
 <script type="text/javascript" src="fingerblast.js"></script>
@@ -98,11 +107,11 @@
 $(function() {
 
     //if (!eventListeners) addEventListeners();
-    $('#slideDoor').css('transform','translate(' + (0 - $('#slideDoor').width()) + 'px,0px)' + ' translateZ(0)');
+    //$('#slideDoor').css('transform','translate(' + (0 - $('#slideDoor').width()) + 'px,0px)' + ' translateZ(0)');
     $('#slideDoor').css('webkitTransform','translate(' + (0 - $('#slideDoor').width()) + 'px,0px)' + ' translateZ(0)');
-    $('#slideDoor').css('MozTransform','translate(' + (0 - $('#slideDoor').width()) + 'px,0px)' + ' translateZ(0)');
-    $('#slideDoor').css('msTransform','translate(' + (0 - $('#slideDoor').width()) + 'px,0px)' + ' translateZ(0)');
-    $('#slideDoor').css('OTransform','translate(' + (0 - $('#slideDoor').width()) + 'px,0px)' + ' translateZ(0)');
+    //$('#slideDoor').css('MozTransform','translate(' + (0 - $('#slideDoor').width()) + 'px,0px)' + ' translateZ(0)');
+    //$('#slideDoor').css('msTransform','translate(' + (0 - $('#slideDoor').width()) + 'px,0px)' + ' translateZ(0)');
+    //$('#slideDoor').css('OTransform','translate(' + (0 - $('#slideDoor').width()) + 'px,0px)' + ' translateZ(0)');
 
     $(window).on('load', function () {
       
@@ -261,7 +270,7 @@ $(function() {
 
         if(e.target.id === "slideDoorClose") {
           sliderX.style['-webkit-transition-duration'] = '.2s';
-          sliderX.style.webkitTransform = 'translate3d(' + (0-sliderWidth) + 'px,0px,0px)';
+          sliderX.style.webkitTransform = 'translate(' + (0-sliderWidth) + 'px,0px)' + ' translateZ(0)';
           return;
         }
         console.log('isScrolling: '+ isScrolling);
@@ -291,7 +300,10 @@ $(function() {
           slider.style.webkitTransform = 'translate(0px,' + offsetY + 'px)' + ' translateZ(0)';                 
           slider.style.MozTransform = 'translate(0px,' + offsetY + 'px)' + ' translateZ(0)';                 
           slider.style.msTransform = 'translate(0px,' + offsetY + 'px)' + ' translateZ(0)';                 
-          slider.style.OTransform = 'translate(0px,' + offsetY + 'px)' + ' translateZ(0)';                
+          slider.style.OTransform = 'translate(0px,' + offsetY + 'px)' + ' translateZ(0)';
+
+          //
+          document.getElementById("testAndroid").innerHTML = slider.style[2];                
 
           e = new CustomEvent('slide', {
             detail: { slideNumber: Math.abs(slideNumber) },
@@ -324,6 +336,7 @@ $(function() {
   </head>
   <body>
   <div id="mobile-content">
+    <div id="testAndroid"></div>
     <div id="slideDoor">
       <div id="slideDoorOpen">>></div>
       <div id="title">お知らせ</div>
