test chrome emulator event

--- a/vscroll.html
+++ b/vscroll.html
@@ -348,9 +348,9 @@ $(function() {
       window.addEventListener('touchmove', onTouchMove);
       window.addEventListener('touchend', onTouchEnd);
       // test PC
-      window.addEventListener('mousedown', onTouchStart);
-      window.addEventListener('mousemove', onTouchMove);
-      window.addEventListener('mouseup', onTouchEnd);
+      //window.addEventListener('mousedown', onTouchStart);
+      //window.addEventListener('mousemove', onTouchMove);
+      //window.addEventListener('mouseup', onTouchEnd);
     }();
 });
 </script>
