--- a/vscroll.html
+++ b/vscroll.html
@@ -108,7 +108,7 @@ $(function() {
 
     //if (!eventListeners) addEventListeners();
     //$('#slideDoor').css('transform','translate(' + (0 - $('#slideDoor').width()) + 'px,0px)' + ' translateZ(0)');
-    //$('#slideDoor').css('webkitTransform','translate(' + (0 - $('#slideDoor').width()) + 'px,0px)' + ' translateZ(0)');
+    $('#slideDoor').css('webkitTransform','translate(' + (0 - $('#slideDoor').width()) + 'px,0px)' + ' translateZ(0)');
     //$('#slideDoor').css('MozTransform','translate(' + (0 - $('#slideDoor').width()) + 'px,0px)' + ' translateZ(0)');
     //$('#slideDoor').css('msTransform','translate(' + (0 - $('#slideDoor').width()) + 'px,0px)' + ' translateZ(0)');
     //$('#slideDoor').css('OTransform','translate(' + (0 - $('#slideDoor').width()) + 'px,0px)' + ' translateZ(0)');
@@ -182,9 +182,8 @@ $(function() {
         console.log('toggleFlag: ', toggleFlag);    
       }
       var onTouchStart = function (e) {
-        console.log("Touch Start");
-        var el = e.target;// ? e.target.nodeType === 3 ? e.target.parentNode : e.target : e.srcElement;
-        var point = e.touches ? e.touches[0] : e;
+        //console.log("Touch Start");
+        var el = e.target ? e.target.nodeType === 3 ? e.target.parentNode : e.target : e.srcElement;
         document.getElementById("testAndroid").innerHTML = el.tagName; 
         document.getElementById("testAndroid").innerHTML += ' ';   
 
@@ -208,34 +207,24 @@ $(function() {
         sliderWidth    = sliderX.offsetWidth;        
         resistance     = 1;
         startTime      = +new Date;
-        
-        pageX          = point.pageX;
-        pageY          = point.pageY;
+        pageX          = e.touches[0].pageX;
+        pageY          = e.touches[0].pageY;
 
-        //pageX          = e.touches[0].pageX;
-        //pageY          = e.touches[0].pageY;        
+        
         sliderX.style['-webkit-transition-duration'] = 0;
       };
 
       var onTouchMove = function (e) {
         //console.log("Touch Move");
-        var point = e.touches ? e.touches[0] : e;
-        //if (e.touches.length > 1 || !slider && !sliderX) return; // Exit if a pinch || no slider
-        if ( !slider && !sliderX) return; // Exit if a pinch || no slider
+        if (e.touches.length > 1 || !slider && !sliderX) return; // Exit if a pinch || no slider
 
 
         //console.log('pageY: '+ pageY);
 
-        deltaX = point.pageX - pageX;
-        deltaY = point.pageY - pageY;
-        pageX  = point.pageX;
-        pageY  = point.pageY;
-
-        //deltaX = e.touches[0].pageX - pageX;
-        //deltaY = e.touches[0].pageY - pageY;
-        //pageX  = e.touches[0].pageX;
-        //pageY  = e.touches[0].pageY;
-
+        deltaX = e.touches[0].pageX - pageX;
+        deltaY = e.touches[0].pageY - pageY;
+        pageX  = e.touches[0].pageX;
+        pageY  = e.touches[0].pageY;
         document.getElementById("testAndroid").innerHTML += deltaX;   
         document.getElementById("testAndroid").innerHTML += ' ';   
         //console.log('deltaY: '+ deltaY);
@@ -347,10 +336,7 @@ $(function() {
       window.addEventListener('touchstart', onTouchStart);
       window.addEventListener('touchmove', onTouchMove);
       window.addEventListener('touchend', onTouchEnd);
-      // test PC
-      //window.addEventListener('mousedown', onTouchStart);
-      //window.addEventListener('mousemove', onTouchMove);
-      //window.addEventListener('mouseup', onTouchEnd);
+
     }();
 });
 </script>
